text align chrome fix

--- a/styles/media_queries.css
+++ b/styles/media_queries.css
@@ -66,7 +66,7 @@
   .gallery_title_area {
       line-height: 2.25em;
       text-align: center;
-      text-emphasis: -webkit-center;
+      text-align: -webkit-center;
       text-align: -moz-center;
   }
 
